# enrich_scanned_pdf

./: .gitignore  README.md  pyproject.toml
output/: output_page_2.json  output_page_3.json  output_page_4.json
output/Extract_Arxiv/: Extract_Arxiv.csv  Extract_Arxiv.docx  Extract_Arxiv.html  Extract_Arxiv.json  Extract_Arxiv.odt  Extract_Arxiv.rtf  Extract_Arxiv.xml
parser/: parser.py  pipeline.ipynb  pyproject.toml
pymupdf exemple/: pyu4llm.py
pymupdf exemple/output/: output_page_1.json  output_page_10.json  output_page_11.json  output_page_12.json  output_page_13.json  output_page_2.json  output_page_3.json  output_page_4.json  output_page_5.json  output_page_6.json  output_page_7.json  output_page_8.json  output_page_9.json
service_web/: functions.php  index.php  style.css
service_web/_data/24985/: ComtemporaryCondensed-3MainStreet.md
service_web/_data/output/: output.md
service_web/_scripts/: .htaccess  Enrich_PDF.sh  audit_pdf.sh  check_deps.sh  image_description.py  list_tesseract_languages.sh  module_export.sh  module_structured_text.sh  module_summary.sh  output.md  parser.py  pyproject.toml  pyu4llm.py
service_web/demo/: Extract_Arxiv.md
text based pdf/: image_description.py  moondream.py  pyu4llm.py
text based pdf/output/: ComtemporaryCondensed-3MainStreet.md  output_page_1.json  output_page_2.json  output_page_3.json  output_page_4.json  test.md
