[tool.poetry]
name = "pdf-ocr-pipeline"
version = "0.1.0"
description = "PDF OCR processing pipeline"
authors = 

[tool.poetry.dependencies]
python = "^3.8"
ocrmypdf = "^14.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
