[tool.poetry]
name = "tesserhack"
version = "0.1.0"
description = ""
authors = ["MChrys <chrys.beltran@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docling = "^2.21.0"
pytesseract = "^0.3.10"
Pillow = "^10.2.0"
PyMuPDF = "^1.23.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^7.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
